# ESP-S3

./: .gitignore  README.md
hid_test/: sdkconfig
hid_test/main/: esp_hid_device_main.c
magicLight/: CMakeLists.txt  sdkconfig  sdkconfig.old
magicLight/components/components_template/: CMakeLists.txt
magicLight/components/ws2812b/: CMakeLists.txt  Kconfig  light2812.c  lighteffect2812.c  list.c
magicLight/components/ws2812b/INC/: light2812.h  lighteffect2812.h  list.h
magicLight/main/: CMakeLists.txt  Kconfig.projbuild  magicLight_main.c
project_template/: CMakeLists.txt  README_CN.md  sdkconfig
project_template/components/components_template/: CMakeLists.txt  components_test.c
project_template/components/components_template/INC/: components_test.h
project_template/main/: CMakeLists.txt  template_main.c
